<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/coinIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/coin_icon_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/coinSymbolHeading"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/coin_symbol"
        app:layout_constraintTop_toBottomOf="@id/coinIcon"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/coinSymbol"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="@id/coinSymbolHeading"
        app:layout_constraintBottom_toBottomOf="@+id/coinSymbolHeading"
        app:layout_constraintStart_toEndOf="@id/coinSymbolHeading" />

    <TextView
        android:id="@+id/coinNameHeading"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/coin_name"
        app:layout_constraintTop_toBottomOf="@id/coinSymbol"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/coinName"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/coinNameHeading"
        app:layout_constraintBottom_toBottomOf="@+id/coinNameHeading"
        app:layout_constraintStart_toEndOf="@id/coinNameHeading" />
    <TextView
        android:id="@+id/uuidHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/TextAppearance.AppCompat.Title"
        android:text="@string/uuid"
        app:layout_constraintTop_toBottomOf="@id/coinName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toTopOf="@id/uuidHeading"
        app:layout_constraintBottom_toBottomOf="@+id/uuidHeading"
        app:layout_constraintStart_toEndOf="@id/uuidHeading" />

    <TextView
        android:id="@+id/marketCapHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/market_cap"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/uuid"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/marketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/marketCapHeading"
        app:layout_constraintTop_toTopOf="@id/marketCapHeading"
        app:layout_constraintStart_toEndOf="@id/marketCapHeading" />

    <TextView
        android:id="@+id/priceHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        style="@style/TextAppearance.AppCompat.Title"

        app:layout_constraintTop_toBottomOf="@id/marketCap"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/priceHeading"
        app:layout_constraintTop_toTopOf="@id/priceHeading"
        app:layout_constraintStart_toEndOf="@id/priceHeading" />

    <TextView
        android:id="@+id/rankHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rank"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/rankHeading"
        app:layout_constraintTop_toTopOf="@id/rankHeading"
        app:layout_constraintStart_toEndOf="@id/rankHeading" />

    <TextView
        android:id="@+id/priceToBtcHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price_to_btc"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/rankHeading"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/priceToBtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/priceToBtcHeading"
        app:layout_constraintTop_toTopOf="@id/priceToBtcHeading"
        app:layout_constraintStart_toEndOf="@id/priceToBtcHeading" />

    <TextView
        android:id="@+id/listedAtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/listed_at"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/priceToBtcHeading"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/listedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="@+id/listedAtHeading"
        app:layout_constraintTop_toTopOf="@id/listedAtHeading"
        app:layout_constraintStart_toEndOf="@id/listedAtHeading" />

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listedAt" />

</androidx.constraintlayout.widget.ConstraintLayout>
